# Cargo.toml
#
# Copyright (C) 2023 James Petersen <m@jamespetersen.ca>
# Licensed under Apache 2.0 OR MIT. See LICENSE-APACHE or LICENSE-MIT

[package]
name = "homedir"
version = "0.1.0"
edition = "2021"
authors = ["James Petersen <m@jamespetersen.ca>"]
license = "MIT OR Apache-2.0"
description = "A crate to help get the home directory of any user on a system."
homepage = "https://jamespetersen.ca/homedir"
readme = "README.md"
repository = "https://github.com/ljtpetersen/homedir"
keywords = ["home", "directory", "utility", "lightweight", "profile"]
categories = ["config", "filesystem"]

# Unix Dependencies
[target.'cfg(unix)'.dependencies]
# I debated rolling with my own implementation, but it would probably
# just be a copy of the implementation in here, so I didn't.
nix = { version = "0.26.2", features = ["user"] }

# Windows Dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Registry"
] }
widestring = "1.0.2"

[features]
# If the home directory could not be found via the normal method,
# get it from the environment.
check_env = []

[dependencies]
cfg-if = "1.0.0"
