# Cargo.toml
#
# Copyright (C) 2023-2024 James Petersen <m@jamespetersen.ca>
# Licensed under Apache 2.0 OR MIT. See LICENSE-APACHE or LICENSE-MIT

[package]
name = "homedir"
version = "0.3.0"
edition = "2021"
authors = ["James Petersen <m@jamespetersen.ca>"]
license = "MIT OR Apache-2.0"
description = "A crate to help get the home directory of any user on a system."
homepage = "https://jamespetersen.ca/homedir"
readme = "README.md"
repository = "https://github.com/ljtpetersen/homedir"
keywords = ["home", "directory", "utility", "lightweight", "profile"]
categories = ["config", "filesystem"]

# Unix Dependencies
[target.'cfg(unix)'.dependencies]
# I debated rolling with my own implementation, but it would probably
# just be a copy of the implementation in here, so I didn't.
nix = { version = "0.26.2", features = ["user"] }

# Windows Dependencies
[target.'cfg(windows)'.dependencies]
widestring = "1.0.2"
windows = { version = "0.57.0", features = [
    "Win32",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_System_Threading",
    "Win32_System_Wmi",
] }

[dependencies]
cfg-if = "1.0.0"

[features]
default = []
# This is for Windows specifically.
windows_no_coinitialize = []

